# hmm

./: .gitignore  CMakeLists.txt  run_build.sh
include/glad/: glad.h
src/: glad.c  main.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/entity/: CMakeLists.txt  entity.cpp  entity.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/shader/: CMakeLists.txt  fragment.glsl  shader.cpp  shader.hpp  vertex.glsl
src/shader/shading/: ambient_frag.glsl  ambient_vert.glsl  house_frag.glsl  house_vert.glsl  light_frag.glsl  light_vert.glsl
src/texture/: CMakeLists.txt  texture.cpp  texture.hpp
src/window/: CMakeLists.txt  window.cpp  window.hpp
